# bereal-telegram

./: Dockerfile  README.md  pyproject.toml  requirements.txt
bereal_telegram/: handlers.py  run.py  settings.py
tests/: test_bereal_telegram.py
